<?xml version="1.0"?>
<package format="2">
    <name>bev_uav_waypoints_manager</name>
    <version>0.8.2</version>

    <description>The Waypoints Manager package</description>
    <author email="tiago.s.fernandes@beyond-vision.pt">Tiago Fernandes</author>
    <maintainer email="rmendes@beyond-vision.pt">Rui Mendes</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>bev_uav_msgs</depend>
    <depend>geographic_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <export></export>
</package>
