<?xml version="1.0"?>
<package format="2">
  <name>bev_uav_control_bringup</name>
  <version>0.8.3</version>
  <description>Bringup of BEV UAV Control packages</description>

  <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>
  <maintainer email="andre.ferreira@beyond-vision.pt">André Ferreira</maintainer>

  <license>BSD-3</license>
  <url>https://gitlab.pdmfc.com/drones/ros1/heifu-uav/control</url>

  <author email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bev_uav_mavros_commands</exec_depend>
  <exec_depend>bev_uav_navigation_controller</exec_depend>
  <exec_depend>bev_uav_priority_manager</exec_depend>
  <exec_depend>bev_uav_status_diagnostic</exec_depend>
  <exec_depend>mavros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
